.kubernetes/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
