.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
#    traefik.ingress.kubernetes.io/router.middlewares: default-webservers@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
